deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: url-shortener-frontend
  template:
    metadata:
      name: url-shortener-frontend-pod
      labels:
        components: url-shortener-frontend
    spec:
      containers:
        - name: url-shortener-frontend-container
          image: antonlarichev/short-app:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
