clusterIp.yml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-cluster-ip
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    components: url-shortener-frontend
